fix(gitstats.css): add white-space: nowrap to table tags td

--- a/gitstats/gitstats.css
+++ b/gitstats/gitstats.css
@@ -43,6 +43,7 @@ table.noborders td {
 
 table.tags td {
 	vertical-align: top;
+	white-space: nowrap;
 }
 
 td {
